    - armv6_Add_support_for_ARMv7_atomic_operations.patch
    - s390x_jscore.diff
    - blacklist-diginotar-cert.diff
    - Remove_QtHelp_dependency_on_QtXml.patch
  * Drop openssl_no_ssl2.patch - fixed upstream.
  * Add patches:
    - qt-multiarch-plugin-path-compat.diff - include legacy pre-multiarch
      plugin path.
  * Update debian/control: mark Qt libraries as Multi-Arch.

  [ Pino Toscano ]
  * Use the hurd-g++ mkspec when building on Hurd:
    - add mkspecs/hurd-g++/qmake.conf in 01_debian_append_qt4_suffix.diff
    - update the platform_arg in debian/rules

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 22 Dec 2011 17:50:13 +0200

qt4-x11 (4:4.7.4-1) unstable; urgency=low

  * New upstream release.
    - QTreeView crash in indexRowSizeHint/itemHeight. (Closes: #632855)
    - include fixes for CVE-2011-3193 and CVE-2011-3194. (Closes: #641738)
  * Add Pino Toscano to Uploaders.
  * Remove patches:
    - Fix_GL_problems_on_stock_1.4_SGX_drivers.patch - stolen upstream.
    - Fixed_missing_text_when_using_static_text_items_in_GL_2_engine.patch -
      stolen upstream.
    - Prevent_recursion_when_creating_window_surface.patch - stolen upstream.
    - Check-if-the-interpolators-have-already-been-deleted.patch - stolen
      upstream.
    - 21_qt_ia32_library_path.diff - interacts incompatibly with the multiarch
      path resolution and should be obsolete anyway now that multiarch is
      available: we should drop qt from the next ia32-libs upload.
  * Add patches:
    - openssl_no_ssl2.patch - OpenSSL in Debian dropped the insecure SSLv2
      protocol. (Closes: #640210)
    - Remove_QtHelp_dependency_on_QtXml.patch - (Closes: #641753)
  * Break qdbus out into a separate 'qdbus' package and make it a dependency of
    libqt4-dbus, because some things will use this at runtime. It makes
    libqt4-dbus genuinely multiarch-installable.
  * Update debian/rules:
    - add -reduce-relocations configure option.