@@ -25,6 +25,8 @@ qt4-x11 (4:4.8.0-0multiarch1) UNRELEASED; urgency=low
     - qt-multiarch-plugin-path-compat.diff - include legacy pre-multiarch
       plugin path.
   * Update debian/control: mark Qt libraries as Multi-Arch.
+  * Update debian/rules:
+    - add DEB_HOST_MULTIARCH support for libdir/plugindir.
 
   [ Pino Toscano ]
   * Use the hurd-g++ mkspec when building on Hurd:
